# fisica1

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  PREREQUISITI.md  README.md  appveyor.yml  build.ps1  build.sh
registro_lezioni/: registro.md  registro_AA_2016-2017.md  registro_AA_2017-2018.md
src/: area_cerchio.cpp  formula_quadratica.cpp  integratore.cpp  numeri_random.cpp  oscillatore.cpp
